--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/node": "^8.2.5",
+    "@supabase/supabase-js": "^2.40.0",
+    "astro": "^4.5.9",
     "typescript": "^5.4.3"
   }
 }
