--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/node": "^8.2.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/truculenta": "^5.0.19",
     "@supabase/supabase-js": "^2.40.0",
     "astro": "^4.5.9",
+    "chart.js": "^4.4.2",
+    "flowbite": "^2.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
