--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.5.9",
     "chart.js": "^4.4.2",
     "flowbite": "^2.3.0",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3"
   },
