--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/node": "^8.2.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.4.0",
     "@fontsource-variable/truculenta": "^5.0.19",
     "@supabase/supabase-js": "^2.40.0",
     "astro": "^4.5.9",
